<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.quizapp.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/question1"
                style="@style/question_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_1"/>

            <RadioGroup
                android:id="@+id/group_one"
                android:layout_width="match_parent"
                android:padding="15dp"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/q1_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1_a"/>

                <RadioButton
                    android:id="@+id/q1_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1_b"/>

                <RadioButton
                    android:id="@+id/q1_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1_c"/>

                <RadioButton
                    android:id="@+id/q1_d"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1_d"/>

            </RadioGroup>

            <TextView
                android:id="@+id/question2"
                style="@style/question_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_2"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/q2_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q2_a"/>

                <CheckBox
                    android:id="@+id/q2_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q2_b"/>

                <CheckBox
                    android:id="@+id/q2_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q2_c"/>

                <CheckBox
                    android:id="@+id/q2_d"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q2_d"/>

            </LinearLayout>

            <TextView
                android:id="@+id/question3"
                style="@style/question_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_3"/>

            <RadioGroup
                android:id="@+id/group_three"
                android:layout_width="match_parent"
                android:padding="15dp"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/q3_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q3_a"/>

                <RadioButton
                    android:id="@+id/q3_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q3_b"/>

                <RadioButton
                    android:id="@+id/q3_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q3_c"/>

                <RadioButton
                    android:id="@+id/q3_d"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q3_d"/>

            </RadioGroup>

            <TextView
                android:id="@+id/question4"
                style="@style/question_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_4"/>

            <EditText
                android:id="@+id/q4_a"
                android:layout_width="150dp"
                android:inputType="number"
                android:padding="15dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/submit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="Submit"/>

                <TextView
                    android:id="@+id/result_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:textColor="@color/correct_answer"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>

            </LinearLayout>



        </LinearLayout>


    </ScrollView>

</RelativeLayout>
